// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearProgress can be closed 1`] = `
<DocumentFragment>
  <nav
    aria-label="Progress Bar"
    aria-valuemax="1"
    aria-valuemin="0"
    class="mdc-linear-progress mdc-linear-progress--closed mdc-linear-progress--indeterminate mdc-linear-progress--closed"
    role="progressbar"
  >
    <div
      class="mdc-linear-progress__buffer"
    >
      <div
        class="mdc-linear-progress__buffer-bar"
        style="flex-basis: 100%;"
      />
      <div
        class="mdc-linear-progress__buffer-dots"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      style="transform: scaleX(1);"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
  </nav>
</DocumentFragment>
`;

exports[`LinearProgress can buffer 1`] = `
<DocumentFragment>
  <nav
    aria-label="Progress Bar"
    aria-valuemax="1"
    aria-valuemin="0"
    class="mdc-linear-progress mdc-linear-progress--indeterminate"
    role="progressbar"
  >
    <div
      class="mdc-linear-progress__buffer"
    >
      <div
        class="mdc-linear-progress__buffer-bar"
        style="flex-basis: 100%;"
      />
      <div
        class="mdc-linear-progress__buffer-dots"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      style="transform: scaleX(1);"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
  </nav>
</DocumentFragment>
`;

exports[`LinearProgress renders 1`] = `
<DocumentFragment>
  <nav
    aria-label="Progress Bar"
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.5"
    class="mdc-linear-progress"
    role="progressbar"
  >
    <div
      class="mdc-linear-progress__buffer"
    >
      <div
        class="mdc-linear-progress__buffer-bar"
        style="flex-basis: 0%;"
      />
      <div
        class="mdc-linear-progress__buffer-dots"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      style="transform: scaleX(0.5);"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <div
        class="mdc-linear-progress__bar-inner"
      />
    </div>
  </nav>
</DocumentFragment>
`;
